--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "start": "nodemon -e js,graphql -x node -r dotenv/config src/index.js",
     "debug": "nodemon -e js,graphql -x node --inspect -r dotenv/config src/index.js",
-    "nodemon": "nodemon"
+    "nodemon": "nodemon",
+    "deploy": "prisma deploy --env-file .env"
   },
   "dependencies": {
     "bcryptjs": "2.4.3",
