--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "bcryptjs": "2.4.3",
+    "cookie-parser": "^1.4.3",
     "graphql-yoga": "1.17.1",
     "jsonwebtoken": "8.4.0",
     "prisma-client-lib": "1.25.4"
